test/fail_compilation/fail354.d
    struct S(int N) { this(T!N) { } }
    alias S!1 M; 
